# tweakML

./: .coverage  .gitignore  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: tests.yml
src/tweakml/: __init__.py  graph.py  lib.py  tweakml.py
src/tweakml.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/tweakml/models/: __init__.py  base.py  ridge.py
tests/: test_graph.py
