[build-system]
requires = ["setuptools>=62.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--cov=tweakml --cov-report=html --cov-config=.coveragerc"
testpaths = [
    "tests",
]

[project]
name = "tweakml"
version = "0.0.0"

[tool.setuptools.packages.find]
where = ["src"]
include = ["tweakml*"]

