[metadata]
name = tweakml
description = Parameter tweaking for ML models
author = Edward Antonian
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
long_description = file: README.md
long_description_content_type = text/markdown
version=0.0.0
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
project_urls =
    Bug Tracker = https://github.com/nickelnine37/tweakML/issues

[options]
packages =
    tweakml
install_requires =
    numpy
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    tox>=3.24

[options.packages.find]
where = src

[options.package_data]
pykronecker = py.typed